[package]
version = "0.1.0"
name = "chiffre"
description = "chiffre helps you generate RSA key pairs as well as encrypt or decrypt files."
authors = ["Luca Goslar <git@lucagoslar.de>"]
license = "MIT"
keywords = ["encryption", "rsa", "files"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
clap = "3.0.12"
aes-gcm = "0.9.4"
rsa = "0.5.0"
rand = "0.8.4"